--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylessheet" href="/styles.css">
     <title>Paskaita10</title>
 </head>
 <body>
-    <div>Emptydiv</div>
-    <div>naujas div</div>
-    
+    <div class="boxes-wrapper">
+        <div class="box">Test1</div>
+        <div class="box">Emptydiv</div>
+        <div class="box">naujas div</div>
+    </div>
 </body>
 </html>
