--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylessheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Paskaita10</title>
 </head>
 <body>
+        <button>Button1</button>
     <div class="boxes-wrapper">
         <div class="box">Test1</div>
-        <div class="box">Emptydiv</div>
-        <div class="box">naujas div</div>
+        <div class="box">Test2</div>
+        <div class="box">Test3</div>
+        <div class="box">Test5</div>
+        <div class="box">Test6</div>
+        <div class="box">Test7</div>
     </div>
+    <button>Button2</button>
 </body>
 </html>
