--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="box">Test5</div>
         <div class="box">Test6</div>
         <div class="box">Test7</div>
+        <div class="box">Test7</div>
     </div>
     <button>Button2</button>
 </body>
